@@ -1,4 +1,4 @@
-#!/usr/bin/env perl
+#!/usr/local/bin/perl
 # vim: set ts=2 sts=2 sw=2 expandtab smarttab filetype=perl:
 # PODNAME: rbinperl
 # ABSTRACT: Execute perl using relative lib and assuming -S
