@@ -28,7 +28,7 @@ which is often limited to a single argument...
 
 This won't work on linux:
 
-  #!/usr/bin/env perl -I/home/username/perl5/lib/perl5 -S plackup
+  #!/usr/local/bin/perl -I/home/username/perl5/lib/perl5 -S plackup
 
 This will:
 
